Fix CSS: Border-spacing tabella e padding articoli correlati

--- a/css/style.css
+++ b/css/style.css
@@ -55,10 +55,13 @@
         }
 
         /* Tabella */
+        table{
+            border-spacing: 0;
+        }
         .toptabella{
             background-color: #20A9E5;
             color: white;
-            height: 10px;   
+            height: 10px; 
         }
         .riga-dispari{
             background-color: #B1E5F2;
@@ -76,19 +79,17 @@
         font-size: 1.2em;
         margin-bottom: 10px;
     }
-    #articolo1{
+    .foto-correlati{
         color: white;
         font-size: 25px;
-        background-image: url(../img/monitor.jpg);
         height: 200px;
         background-repeat: no-repeat;
         margin-bottom: 10px;
+        padding: 15px;
+    }
+    #articolo1{
+        background-image: url(../img/monitor.jpg);
     }
     #articolo2{
-        color: white;
-        font-size: 25px;
         background-image: url(../img/graph.jpg);
-        height: 200px;
-        background-repeat: no-repeat;
-        margin-bottom: 10px;
     }
